--- a/03-Cleaning-Howard.qmd
+++ b/03-Cleaning-Howard.qmd
@@ -1,5 +1,5 @@
 ---
-title: "Cleaning - Howard County"
+title: "Howard County"
 ---
 
 ## Setup
@@ -45,6 +45,6 @@ howard_clean
 ## Export
 
 ```{r}
-howard_clean |> write_rds("data-processed/01-HowardCounty.rds")
+howard_clean |> write_rds("data-processed/Howard-County.rds")
 ```
 
