--- a/04-Cleaning-MidlandCity.qmd
+++ b/04-Cleaning-MidlandCity.qmd
@@ -1,5 +1,5 @@
 ---
-title: "Cleaning - Midland City"
+title: "Midland City"
 ---
 
 ## Setup
@@ -40,6 +40,6 @@ midland_clean
 
 ## Export
 ```{r}
-midland_clean |> write_rds("data-processed/01-MidlandCity.rds")
+midland_clean |> write_rds("data-processed/Midland-City.rds")
 ```
 
