--- a/06-Cleaning-MonahansCity.qmd
+++ b/06-Cleaning-MonahansCity.qmd
@@ -1,5 +1,5 @@
 ---
-title: "Cleaning - Monahans City"
+title: "Monahans City"
 ---
 
 ## Setup
@@ -40,5 +40,5 @@ monahans_clean
 ## Export
 
 ```{r}
-monahans_clean |> write_rds("data-processed/01-MonahansCity.rds")
+monahans_clean |> write_rds("data-processed/Monahans-City.rds")
 ```
