--- a/09-Cleaning-OdessaCity.qmd
+++ b/09-Cleaning-OdessaCity.qmd
@@ -1,5 +1,5 @@
 ---
-title: "Cleaning - Odessa City"
+title: "Odessa City"
 ---
 
 ## Setup
@@ -39,6 +39,6 @@ odessa_clean
 ## Export
 
 ```{r}
-odessa_clean |> write_rds("data-processed/01-OdessaCity.rds")
+odessa_clean |> write_rds("data-processed/Odessa-City.rds")
 ```
 
