--- a/11-Cleaning-PlainviewCity.qmd
+++ b/11-Cleaning-PlainviewCity.qmd
@@ -1,5 +1,5 @@
 ---
-title: "Cleaning - Plainview City"
+title: "Plainview City"
 ---
 
 ## Setup
@@ -44,6 +44,6 @@ plainview_clean
 ## Export
 
 ```{r}
-plainview_clean |> write_rds("data-processed/01-PlainviewCity.rds")
+plainview_clean |> write_rds("data-processed/Plainview-City.rds")
 ```
 
