--- a/16-analysis-1.qmd
+++ b/16-analysis-1.qmd
@@ -17,21 +17,21 @@ library(lubridate)
 Read in all the cleaned data from cities/counties. 
 
 ```{r}
-amarillo <- read_rds("data-processed/Amarillo-City.rds")
-carson <- read_rds("data-processed/Carson-County.rds")
-howard <- read_rds("data-processed/Howard-County.rds")
-midland <- read_rds("data-processed/Midland-City.rds")
-lubbock <- read_rds("data-processed/Lubbock-County.rds")
-monahans <- read_rds("data-processed/Monahans-City.rds")
-moore <- read_rds("data-processed/Moore-County.rds")
-nolan <- read_rds("data-processed/Nolan-County.rds")
-odessa <- read_rds("data-processed/Odessa-City.rds")
-pecos <- read_rds("data-processed/Pecos-City.rds")
-plainview <- read_rds("data-processed/Plainview-City.rds")
-randall <- read_rds("data-processed/Randall-County.rds")
-slaton <- read_rds("data-processed/Slaton-City.rds")
-snyder <- read_rds("data-processed/Snyder-City.rds")
-wheeler <- read_rds("data-processed/Wheeler-County.rds")
+amarillo <- read_csv("data-processed/Amarillo-City.csv")
+carson <- read_csv("data-processed/Carson-County.csv")
+howard <- read_csv("data-processed/Howard-County.csv")
+midland <- read_csv("data-processed/Midland-City.csv")
+lubbock <- read_csv("data-processed/Lubbock-County.csv")
+monahans <- read_csv("data-processed/Monahans-City.csv")
+moore <- read_csv("data-processed/Moore-County.csv")
+nolan <- read_csv("data-processed/Nolan-County.csv")
+odessa <- read_csv("data-processed/Odessa-City.csv")
+pecos <- read_csv("data-processed/Pecos-City.csv")
+plainview <- read_csv("data-processed/Plainview-City.csv")
+randall <- read_csv("data-processed/Randall-County.csv")
+slaton <- read_csv("data-processed/Slaton-City.csv")
+snyder <- read_csv("data-processed/Snyder-City.csv")
+wheeler <- read_csv("data-processed/Wheeler-County.csv")
 
 ```
 
