--- a/12-Cleaning-RandallCounty.qmd
+++ b/12-Cleaning-RandallCounty.qmd
@@ -29,21 +29,24 @@ Get rid of extra columns and make date_arrest and time_arrest into one column.
 ```{r}
 randall_clean <- randall |> mutate(
   datetime_arrest = paste(date_arrest,substr(time_arrest,12,19)),
-  datetime_arrest = ymd_hms(datetime_arrest)
+  datetime_arrest = ymd_hms(datetime_arrest),
 ) |> select(
   -"SO #",
-  -date_arrest,
   -time_arrest,
   -agency_arrest,
-  -warrant_ref
-)
+  -warrant_ref,
+  -height_ft,
+  -height_in,
+  -weight,
+  -address
+) |> cbind(address_arrest = NA, agency_arrest = NA, ethnicity = NA)
 
-randall_clean
+randall_clean |> glimpse()
 ```
 
 ## Export
 
 ```{r}
-randall_clean |> write_rds("data-processed/Randall-County.rds")
+randall_clean |> write_csv("data-processed/Randall-County.csv")
 ```
 
